@@ -48,7 +48,7 @@ sub brik_init {
    $self->debug && $self->log->debug("brik_init: done");
 
    $SIG{INT} = sub {
-      $self->debug && $self->log->debug("init: INT caught");
+      $self->debug && $self->log->debug("brik_init: INT caught");
       $shell->run_exit;
       exit(0);
    };
